--- a/_posts/0000-01-02-eShanSE.md
+++ b/_posts/0000-01-02-eShanSE.md
@@ -2,5 +2,5 @@
 layout: slide  
 title: "Welcome to out second slide!"  
 ---  
-Your text  
+To navitage to the previous slide 
 Use the left arrow to go back!  
